// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`patches rich text image nodes > existing > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [],
          "text": "Donec Enim Diam Vulputate Ut Pharetra Sit Amet Aliquam",
          "type": "heading4",
        },
        {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 1,
          },
          "id": "id-existing",
          "type": "image",
          "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
        },
      ],
    },
  ],
}
`;

exports[`patches rich text image nodes > existing > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "A molestie lorem ipsum dolor sit amet consectetur adipiscing elit ut",
              "type": "list-item",
            },
            {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 1,
              },
              "id": "id-existing",
              "type": "image",
              "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Egestas maecenas pharetra convallis posuere morbi leo urna molestie at. Cras fermentum odio eu feugiat pretium.",
            "type": "preformatted",
          },
          {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "id-existing",
            "type": "image",
            "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [],
                "text": "Vel Elit Scelerisque Mauris Pellentesque Pulvinar Pellentesque",
                "type": "heading3",
              },
              {
                "alt": null,
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "transparent",
                  "x": 0,
                  "y": 0,
                  "zoom": 1,
                },
                "id": "id-existing",
                "type": "image",
                "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches rich text image nodes > existing > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "Diam Ut Venenatis Tellus",
              "type": "heading6",
            },
            {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 1,
              },
              "id": "id-existing",
              "type": "image",
              "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Tincidunt Vitae Semper Quis Lectus Nulla",
            "type": "heading4",
          },
          {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "id-existing",
            "type": "image",
            "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
          },
        ],
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches rich text image nodes > existing > static zone 1`] = `
{
  "field": [
    {
      "spans": [],
      "text": "Interdum Velit Euismod",
      "type": "heading5",
    },
    {
      "alt": null,
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "transparent",
        "x": 0,
        "y": 0,
        "zoom": 1,
      },
      "id": "id-existing",
      "type": "image",
      "url": "https://images.unsplash.com/photo-1587502537745-84b86da1204f?w=6550&h=4367&fit=crop",
    },
  ],
}
`;

exports[`patches rich text image nodes > new > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [],
          "text": "Donec Enim Diam Vulputate Ut Pharetra Sit Amet Aliquam",
          "type": "heading4",
        },
        {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 1,
          },
          "id": "c1d5d24feae",
          "type": "image",
          "url": "https://images.unsplash.com/photo-1504198266287-1659872e6590?w=4272&h=2848&fit=crop",
        },
      ],
    },
  ],
}
`;

exports[`patches rich text image nodes > new > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "A molestie lorem ipsum dolor sit amet consectetur adipiscing elit ut",
              "type": "list-item",
            },
            {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 1,
              },
              "id": "961adcf1f5d",
              "type": "image",
              "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?w=2200&h=1467&fit=crop",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Egestas maecenas pharetra convallis posuere morbi leo urna molestie at. Cras fermentum odio eu feugiat pretium.",
            "type": "preformatted",
          },
          {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "961adcf1f5d",
            "type": "image",
            "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?w=2200&h=1467&fit=crop",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [],
                "text": "Vel Elit Scelerisque Mauris Pellentesque Pulvinar Pellentesque",
                "type": "heading3",
              },
              {
                "alt": null,
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "transparent",
                  "x": 0,
                  "y": 0,
                  "zoom": 1,
                },
                "id": "961adcf1f5d",
                "type": "image",
                "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?w=2200&h=1467&fit=crop",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches rich text image nodes > new > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "Diam Ut Venenatis Tellus",
              "type": "heading6",
            },
            {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 1,
              },
              "id": "61cc54f4a69",
              "type": "image",
              "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Tincidunt Vitae Semper Quis Lectus Nulla",
            "type": "heading4",
          },
          {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "61cc54f4a69",
            "type": "image",
            "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
          },
        ],
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches rich text image nodes > new > static zone 1`] = `
{
  "field": [
    {
      "spans": [],
      "text": "Interdum Velit Euismod",
      "type": "heading5",
    },
    {
      "alt": null,
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "transparent",
        "x": 0,
        "y": 0,
        "zoom": 1,
      },
      "id": "ed908b1e225",
      "type": "image",
      "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?w=6000&h=4000&fit=crop",
    },
  ],
}
`;

exports[`patches rich text image nodes > newLinkTo > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [],
          "text": "Donec Enim Diam Vulputate Ut Pharetra Sit Amet Aliquam",
          "type": "heading4",
        },
        {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 1,
          },
          "id": "c1d5d24feae",
          "linkTo": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "laoreet",
            "link_type": "Document",
            "tags": [],
            "type": "orci",
          },
          "type": "image",
          "url": "https://images.unsplash.com/photo-1504198266287-1659872e6590?w=4272&h=2848&fit=crop",
        },
      ],
    },
  ],
}
`;

exports[`patches rich text image nodes > newLinkTo > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "A molestie lorem ipsum dolor sit amet consectetur adipiscing elit ut",
              "type": "list-item",
            },
            {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 1,
              },
              "id": "961adcf1f5d",
              "linkTo": {
                "id": "id-existing",
                "isBroken": false,
                "lang": "tortor,",
                "link_type": "Document",
                "tags": [
                  "Risus In",
                ],
                "type": "dui",
              },
              "type": "image",
              "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?w=2200&h=1467&fit=crop",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Egestas maecenas pharetra convallis posuere morbi leo urna molestie at. Cras fermentum odio eu feugiat pretium.",
            "type": "preformatted",
          },
          {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "961adcf1f5d",
            "linkTo": {
              "id": "id-existing",
              "isBroken": false,
              "lang": "tortor,",
              "link_type": "Document",
              "tags": [
                "Risus In",
              ],
              "type": "dui",
            },
            "type": "image",
            "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?w=2200&h=1467&fit=crop",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [],
                "text": "Vel Elit Scelerisque Mauris Pellentesque Pulvinar Pellentesque",
                "type": "heading3",
              },
              {
                "alt": null,
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "transparent",
                  "x": 0,
                  "y": 0,
                  "zoom": 1,
                },
                "id": "961adcf1f5d",
                "linkTo": {
                  "id": "id-existing",
                  "isBroken": false,
                  "lang": "tortor,",
                  "link_type": "Document",
                  "tags": [
                    "Risus In",
                  ],
                  "type": "dui",
                },
                "type": "image",
                "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?w=2200&h=1467&fit=crop",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches rich text image nodes > newLinkTo > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "Diam Ut Venenatis Tellus",
              "type": "heading6",
            },
            {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 1,
              },
              "id": "61cc54f4a69",
              "linkTo": {
                "id": "id-existing",
                "isBroken": false,
                "lang": "sapien",
                "link_type": "Document",
                "tags": [
                  "Aenean",
                ],
                "type": "amet",
              },
              "type": "image",
              "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Tincidunt Vitae Semper Quis Lectus Nulla",
            "type": "heading4",
          },
          {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "61cc54f4a69",
            "linkTo": {
              "id": "id-existing",
              "isBroken": false,
              "lang": "sapien",
              "link_type": "Document",
              "tags": [
                "Aenean",
              ],
              "type": "amet",
            },
            "type": "image",
            "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
          },
        ],
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches rich text image nodes > newLinkTo > static zone 1`] = `
{
  "field": [
    {
      "spans": [],
      "text": "Interdum Velit Euismod",
      "type": "heading5",
    },
    {
      "alt": null,
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "transparent",
        "x": 0,
        "y": 0,
        "zoom": 1,
      },
      "id": "ed908b1e225",
      "linkTo": {
        "id": "id-existing",
        "isBroken": false,
        "lang": "eget",
        "link_type": "Document",
        "tags": [],
        "type": "phasellus",
      },
      "type": "image",
      "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?w=6000&h=4000&fit=crop",
    },
  ],
}
`;

exports[`patches rich text image nodes > otherRepository > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [],
          "text": "Donec Enim Diam Vulputate Ut Pharetra Sit Amet Aliquam",
          "type": "heading4",
        },
        {
          "alt": "Feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#5c0990",
            "x": 2090,
            "y": -1492,
            "zoom": 1.854310159304717,
          },
          "id": "6442e21ad60",
          "type": "image",
          "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05",
        },
      ],
    },
  ],
}
`;

exports[`patches rich text image nodes > otherRepository > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": [
            {
              "oembed": {
                "embed_url": "https://twitter.com/prismicio/status/1354835716430319617",
                "height": 113,
                "html": "<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Does anyone want to create a wildly popular website for discussing &#39;Wall Street Bets&#39; using Prismic?<br><br>It may or may not have to look a lot like <a href="https://twitter.com/hashtag/reddit?src=hash&amp;ref_src=twsrc%5Etfw">#reddit</a> and we won&#39;t make it private.<br><br>Just asking for some friends...</p>&mdash; Prismic (@prismicio) <a href="https://twitter.com/prismicio/status/1354835716430319617?ref_src=twsrc%5Etfw">January 28, 2021</a></blockquote>
<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
",
                "thumbnail_height": null,
                "thumbnail_url": null,
                "thumbnail_width": null,
                "type": "rich",
                "version": "1.0",
                "width": 200,
              },
              "type": "embed",
            },
            {
              "alt": "Eros donec ac odio tempor orci dapibus",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#1eeca0",
                "x": 1722,
                "y": 1820,
                "zoom": 1.8326837750693512,
              },
              "id": "3a8ec9378bc",
              "type": "image",
              "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Egestas maecenas pharetra convallis posuere morbi leo urna molestie at. Cras fermentum odio eu feugiat pretium.",
            "type": "preformatted",
          },
          {
            "alt": "Aliquet lectus proin nibh nisl condimentum id venenatis a",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#87853a",
              "x": -1429,
              "y": -2019,
              "zoom": 1.75840565859303,
            },
            "id": "3a8ec9378bc",
            "type": "image",
            "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [],
                "text": "Nunc Non Blandit Massa Enim",
                "type": "heading5",
              },
              {
                "alt": "Id faucibus nisl tincidunt eget nullam non nisi est sit amet",
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "#252b35",
                  "x": 855,
                  "y": 1518,
                  "zoom": 1.5250952426635416,
                },
                "id": "3a8ec9378bc",
                "type": "image",
                "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches rich text image nodes > otherRepository > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "At Ultrices Mi Tempus Imperdiet",
              "type": "heading2",
            },
            {
              "alt": "Sed id semper risus in hendrerit gravida rutrum",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#104dde",
                "x": -1621,
                "y": -870,
                "zoom": 1.7278759511485409,
              },
              "id": "2003a644c30",
              "type": "image",
              "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Tincidunt Vitae Semper Quis Lectus Nulla",
            "type": "heading4",
          },
          {
            "alt": "Sed nisi lacus sed viverra tellus in hac habitasse",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#63a6c9",
              "x": -1609,
              "y": -1609,
              "zoom": 1.7054690955452316,
            },
            "id": "2003a644c30",
            "type": "image",
            "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff",
          },
        ],
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches rich text image nodes > otherRepository > static zone 1`] = `
{
  "field": [
    {
      "spans": [],
      "text": "Interdum Velit Euismod",
      "type": "heading5",
    },
    {
      "alt": "Tortor consequat id porta nibh",
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "#c61c37",
        "x": 349,
        "y": -429,
        "zoom": 1.4911347686990943,
      },
      "id": "ff1efb2b271",
      "type": "image",
      "url": "https://images.unsplash.com/photo-1497436072909-60f360e1d4b1",
    },
  ],
}
`;

exports[`patches rich text image nodes > otherRepositoryLinkTo > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [],
          "text": "Donec Enim Diam Vulputate Ut Pharetra Sit Amet Aliquam",
          "type": "heading4",
        },
        {
          "alt": "Feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#5c0990",
            "x": 2090,
            "y": -1492,
            "zoom": 1.854310159304717,
          },
          "id": "6442e21ad60",
          "linkTo": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "laoreet",
            "link_type": "Document",
            "tags": [],
            "type": "orci",
          },
          "type": "image",
          "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05",
        },
      ],
    },
  ],
}
`;

exports[`patches rich text image nodes > otherRepositoryLinkTo > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": [
            {
              "oembed": {
                "embed_url": "https://twitter.com/prismicio/status/1354835716430319617",
                "height": 113,
                "html": "<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Does anyone want to create a wildly popular website for discussing &#39;Wall Street Bets&#39; using Prismic?<br><br>It may or may not have to look a lot like <a href="https://twitter.com/hashtag/reddit?src=hash&amp;ref_src=twsrc%5Etfw">#reddit</a> and we won&#39;t make it private.<br><br>Just asking for some friends...</p>&mdash; Prismic (@prismicio) <a href="https://twitter.com/prismicio/status/1354835716430319617?ref_src=twsrc%5Etfw">January 28, 2021</a></blockquote>
<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
",
                "thumbnail_height": null,
                "thumbnail_url": null,
                "thumbnail_width": null,
                "type": "rich",
                "version": "1.0",
                "width": 200,
              },
              "type": "embed",
            },
            {
              "alt": "Eros donec ac odio tempor orci dapibus",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#1eeca0",
                "x": 1722,
                "y": 1820,
                "zoom": 1.8326837750693512,
              },
              "id": "3a8ec9378bc",
              "linkTo": {
                "id": "id-existing",
                "isBroken": false,
                "lang": "tortor,",
                "link_type": "Document",
                "tags": [
                  "Risus In",
                ],
                "type": "dui",
              },
              "type": "image",
              "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Egestas maecenas pharetra convallis posuere morbi leo urna molestie at. Cras fermentum odio eu feugiat pretium.",
            "type": "preformatted",
          },
          {
            "alt": "Aliquet lectus proin nibh nisl condimentum id venenatis a",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#87853a",
              "x": -1429,
              "y": -2019,
              "zoom": 1.75840565859303,
            },
            "id": "3a8ec9378bc",
            "linkTo": {
              "id": "id-existing",
              "isBroken": false,
              "lang": "tortor,",
              "link_type": "Document",
              "tags": [
                "Risus In",
              ],
              "type": "dui",
            },
            "type": "image",
            "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [],
                "text": "Nunc Non Blandit Massa Enim",
                "type": "heading5",
              },
              {
                "alt": "Id faucibus nisl tincidunt eget nullam non nisi est sit amet",
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "#252b35",
                  "x": 855,
                  "y": 1518,
                  "zoom": 1.5250952426635416,
                },
                "id": "3a8ec9378bc",
                "linkTo": {
                  "id": "id-existing",
                  "isBroken": false,
                  "lang": "tortor,",
                  "link_type": "Document",
                  "tags": [
                    "Risus In",
                  ],
                  "type": "dui",
                },
                "type": "image",
                "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches rich text image nodes > otherRepositoryLinkTo > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "At Ultrices Mi Tempus Imperdiet",
              "type": "heading2",
            },
            {
              "alt": "Sed id semper risus in hendrerit gravida rutrum",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#104dde",
                "x": -1621,
                "y": -870,
                "zoom": 1.7278759511485409,
              },
              "id": "2003a644c30",
              "linkTo": {
                "id": "id-existing",
                "isBroken": false,
                "lang": "sapien",
                "link_type": "Document",
                "tags": [
                  "Aenean",
                ],
                "type": "amet",
              },
              "type": "image",
              "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Tincidunt Vitae Semper Quis Lectus Nulla",
            "type": "heading4",
          },
          {
            "alt": "Sed nisi lacus sed viverra tellus in hac habitasse",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#63a6c9",
              "x": -1609,
              "y": -1609,
              "zoom": 1.7054690955452316,
            },
            "id": "2003a644c30",
            "linkTo": {
              "id": "id-existing",
              "isBroken": false,
              "lang": "sapien",
              "link_type": "Document",
              "tags": [
                "Aenean",
              ],
              "type": "amet",
            },
            "type": "image",
            "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff",
          },
        ],
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches rich text image nodes > otherRepositoryLinkTo > static zone 1`] = `
{
  "field": [
    {
      "spans": [],
      "text": "Interdum Velit Euismod",
      "type": "heading5",
    },
    {
      "alt": "Tortor consequat id porta nibh",
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "#c61c37",
        "x": 349,
        "y": -429,
        "zoom": 1.4911347686990943,
      },
      "id": "ff1efb2b271",
      "linkTo": {
        "id": "id-existing",
        "isBroken": false,
        "lang": "eget",
        "link_type": "Document",
        "tags": [],
        "type": "phasellus",
      },
      "type": "image",
      "url": "https://images.unsplash.com/photo-1497436072909-60f360e1d4b1",
    },
  ],
}
`;
